2013-01-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/Utils.cxx: Util::GetComponent takes extra boolean parameter; if set
	to true, will not search for short region names but assumes the given name
	is the full one
	* scripts/YieldsTableTex.py: no longer check "if sample in name", but
	rather exact match -> issues with channels such as "ttbar" and "ttbarV"
	resolved (only one of them shows up otherwise)

2012-12-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/toy_utils.cxx: memory leak (fitresult not deleted) fixed
	* src/CombineWorkSpaces.cxx: memory leak (intermediate hypotest and
	fitresult pointers not deleted) fixed

2012-12-19 David Cote <david.cote@cern.ch>
	* added blindVR option to configManager
	
2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: argparse bug fixed

2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: argparse.Action classes for arguments using
	nargs, to prevent eating the configFile. argparse.Action class for the
	configFile to prevent it then overwriting the proper setting with None.
	* python/configManager.py: introduction of runOnlyNominalXSec: for
	fixSigXSec=True, run only the nominal fit instead of up and down
	* src/configMgr.cxx: idem

2012-12-19 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/fitConfig.py
	M       python/sample.py
	M       python/systematic.py
	* Option to replace channel systematics from that of different channel

2012-12-19 David Cote <david.cote@cern.ch>
	* Tagged HistFitter-00-00-22

2012-12-17  Zach Marshall <zach.marshall@cern.ch>
	* src/HypoTestTool.cxx: Adding some helpful debugging output
	* src/Utils: Moving to folder-based plots
	* macros/contours: Adding python-based plotting macros
 
2012-12-14 David Cote <david.cote@cern.ch>
	* Added configurable HypoTestName with syntax: myFitConfig.hypoTestName="MyName_200_100"
	* Bug fix in construction fitChannels string of GenerateFitAndPlot function in Utils.cxx