@@ -209,7 +209,7 @@ class Sample(object):
         """
 
         if self.noRenormSys and normalizeSys:
-            log.error("    sample.noRenormSys==True and normalizeSys==True for sample <%s> and syst <%s>. normalizeSys set to False."%(self.name,systName))
+            log.debug("    sample.noRenormSys==True and normalizeSys==True for sample <%s> and syst <%s>. normalizeSys set to False."%(self.name,systName))
             normalizeSys = False
 
         if normalizeSys and not self.normRegions: 
